# penguin-translate

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  config.example.json  embed.go  go.mod  go.sum  wails.json
.githooks/: pre-commit
.github/workflows/: build-windows.yml  smoke.yml
cmd/app/: main.go  main_windows.go
internal/composition/: app.go
internal/feature/window/infra/ocr/testdata/fake-oneocr/: Cargo.toml  build.rs  fake_oneocr.c
internal/httpapi/: global_settings.go  server.go  server_test.go  ui_regression_test.go  unified_settings_test.go
internal/platform/applog/: rotating_writer.go
internal/platform/audio/: devices.go  devices_stub.go  loopback.go  loopback_other.go  loopback_windows.go  playback_other.go  playback_windows.go  runtime_other.go  runtime_windows.go  wasapi_devices_windows.go
internal/platform/cloudapi/: caption.go  caption_presets.go  caption_test.go  client.go  client_test.go  translate.go  tts.go
internal/platform/denoisebinary/: denoise.go  embedded.go  stub.go
internal/platform/domain/: engine_policy.go  engine_policy_test.go  settings.go  window_normalize.go
internal/platform/engine/: bundle.go  identity.go  kill_other.go  kill_windows.go  launcher_status.go  managed_cmd.go  policy.go  settings_hook.go  shutdown_request.go  startup.go  stop_managed.go
internal/platform/lifecycle/: lifecycle.go
internal/platform/netguard/: netguard.go  netguard_test.go
internal/platform/osproc/: hide_other.go  hide_windows.go
internal/platform/overlaybinary/: embedded.go  overlay.go  stub.go
internal/platform/overlayipc/: process.go
internal/platform/persist/: defaults.go  defaults_test.go  golden_test.go  json_repository.go  json_repository_test.go
internal/platform/timing/: timing.go
internal/smoke/: smoke_test.go
runtime/denoise/: Cargo.toml
runtime/denoise/src/: main.rs
runtime/inference/: caption_api.py  requirements.txt  server.py  weights_download.py
runtime/overlay/: Cargo.toml  build.rs
runtime/overlay/fake-openvr/: Cargo.toml  build.rs  fake_openvr_api.c
runtime/overlay/openvr/: openvr_shim.c  openvr_shim.h
runtime/overlay/src/: main.rs  vr.rs
tools/png2ico/: main.go
web/ui/: AGENTS.md  app.js  index.html  overlay-timings.html  prefs.js
(+115 files in other folders)
