[package]
name = "penguin-translate-overlay"
version = "0.2.0"
edition = "2021"
description = "Always-on-top desktop subtitle overlay for Penguin Translate"

[[bin]]
name = "penguin-translate-overlay"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
ab_glyph = "0.2"
fontdb = "0.23"
image = { version = "0.25", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

[build-dependencies]
cc = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
